# xiaoman-licai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  design-qa.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: alerts.py  ledger.py  products.py  routes.py  valuation.py
app/core/: config.py  security.py
app/db/: session.py
app/domain/: alerts.py  ledger.py  valuation.py
app/jobs/: update_prices.py
app/models/: alert.py  ledger.py  market_data.py  product.py  user.py  valuation.py
app/schemas/: ledger.py
app/services/: ledger_service.py  portfolio_service.py  price_service.py  product_service.py  user_service.py
app/static/: styles.css
app/templates/: alerts.html  base.html  dashboard.html  holdings.html  ledger.html  ledger_edit.html  updates.html
app/ui/: formatters.py
docs/deployment/: tencent-cloud.md
docs/superpowers/plans/: 2026-06-10-xiaoman-family-fund-mvp.md
docs/superpowers/specs/: 2026-06-10-family-fund-mvp-design.md
tests/: test_health.py
tests/api/: conftest.py  test_ledger_flow.py  test_ledger_service.py  test_models_import.py  test_pages.py  test_price_service.py  test_routes.py  test_security.py
tests/domain/: test_alerts.py  test_ledger.py  test_valuation.py
